Aplicacion VB.Net

--- a/ReviewsJuegos/ReviewsJuegos.vbproj
+++ b/ReviewsJuegos/ReviewsJuegos.vbproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net7.0-windows</TargetFramework>
     <StartupObject>ReviewsJuegos.My.MyApplication</StartupObject>
-    <UseWindowsForms>true</UseWindowsForms>
+    <UseWindowsForms>True</UseWindowsForms>
     <MyType>WindowsForms</MyType>
   </PropertyGroup>
 
